minecraft/smp5-staging/smp5-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smp5-staging
  namespace: smp5
  labels:
    app: smp5-staging
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app: smp5-staging
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: smp5-staging
      annotations:
        prometheus.io/path: "/"
        prometheus.io/scrape: 'true'
        prometheus.io/port: '9100'
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: smp5-staging
          image: itzg/minecraft-server:2026.9.2
          stdin: true
          tty: true
          ports:
            - containerPort: 25565
              name: mc
            - containerPort: 8804
              name: plan
            - containerPort: 8100
              name: bluemap
          livenessProbe:
            exec:
              command:
                - mc-monitor
                - status
            periodSeconds: 5
            failureThreshold: 6
          startupProbe:
            exec:
              command:
                - mc-monitor
                - status
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 9
          volumeMounts:
            - mountPath: "/data"
              name: data
            - mountPath: /data/vt_datapacks.json
              name: config
              subPath: vt_datapacks
            - mountPath: /data/vt_resourcepacks.json
              name: config
              subPath: vt_resourcepacks
            - mountPath: /data/vt_craftingtweaks.json
              name: config
              subPath: vt_craftingtweaks
          resources:
            requests:
              cpu: 1500m
              memory: 12G
            limits:
              cpu: 3000m
      volumes:
        - name: data-orig
          persistentVolumeClaim:
            claimName: smp5-data
            readOnly: true
        - name: data
          persistentVolumeClaim:
            claimName: smp5-data-staging
        - name: config
          configMap:
            name: smp5-config-staging
