minecraft/smp5-staging/bluemap-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smp5-bluemap-staging
  namespace: smp5
spec:
  ports:
    - port: 8100
      name: blue
  selector:
    app: smp5-staging
