minecraft/smp5-staging/plan-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smp5-plan-staging
  namespace: smp5
spec:
  ports:
    - port: 8804
      name: plan
  selector:
    app: smp5-staging
